variables.RunHalf.scala.error
Compilation error:
RunHalf:6: error: value ++ is not a member of Int
    nbBaggle++;
            ^RunHalf:9: error: value ++ is not a member of Int
    nbOrangeCells++;
                 ^